--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
         <h2 class="city-name"><a href="#">Toronto</a></h2>
         <img src="/img/toronto.jpeg" alt="Toronto" class="city-photo">
       </article>
-      <article class="city helsinki">
+
+      <!-- <article class="city helsinki">
         <h2 class="city-name"><a href="#">Helsinki</a></h2>
         <img src="/img/helsinki.jpeg" alt="Helsinki" class="city-photo">
-      </article>
-      <article class="city osaka">
+      </article> -->
+      <!-- <article class="city osaka">
         <h2 class="city-name"><a href="#">Osaka</a></h2>
         <img src="/img/osaka.jpeg" alt="Osaka" class="city-photo">
-      </article>
-      <article class="city lagos">
+      </article> -->
+      <!-- <article class="city lagos">
         <h2 class="city-name"><a href="#">Lagos</a></h2>
         <img src="/img/lagos.jpeg" alt="Lagos" class="city-photo">
-      </article>
+      </article> -->
     </main>
   </body>
 </html>
